--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "dotenv": "^16.0.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "mongoose": "^6.4.4",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.23.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
