--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jade": "^0.29.0",
     "mongoose": "^6.4.4",
     "morgan": "~1.9.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "eslint": "^8.23.1",
