--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "mongoose": "^6.4.4",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^8.23.1",
